# KBOTs-Mixes-Classifier

./: .gitignore  1_setup_dataset.py  2_extract_embeddings.py  2_gen_labels.py  3_extract_embeddings.py  3_extract_embs.py  3_train.py  4_inference.py  4_preprocess.py  4_resample.py  4_train.py  4_train_multiple.py  5_train.py  5_train_keras.py  5_train_multiple.py  6_test.py  Classifier.py  Mert.py  README.md  Utils.py  cnn_structures.py  extract_embeddings.py  global_params.py  mert_test.py  pyproject.toml  requirements.txt  run.py  run_batch.py  setup_dataset.py  test.py  train.bat  train.py
