[project]
name = "kbots-mixes-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Emanuel de Jong",email = "44051853+Emanuel-de-Jong@users.noreply.github.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.11,<3.12.0"
torch = {version = "2.8.0+cu128", source = "pytorch-gpu"}
torchaudio = {version = "2.8.0+cu128", source = "pytorch-gpu"}
transformers = "==4.57.0"
librosa = "==0.11.0"
soundfile = "==0.13.1"
tqdm = "==4.67.1"
scikit-learn = "==1.7.2"
pandas = "==2.3.3"
joblib = "==1.5.2"
ffmpeg-python = "==0.2.0"
unidecode = "==1.4.0"
nnAudio = "==0.3.3"
huggingface_hub = "==0.35.3"
hf_xet = "==1.1.10"
matplotlib = "==3.10.7"
imbalanced-learn = "==0.14.0"
scikit-learn-intelex = "==2025.8.0"
dpcpp-cpp-rt = "==2025.2.1"
dpctl = "==0.20.2"
keras = "==3.11.3"
keras-tuner = "==1.4.7"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
