[project]
name = "kbots-mixes-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Emanuel de Jong",email = "44051853+Emanuel-de-Jong@users.noreply.github.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.11,<3.12.0"
torch = {version = "2.8.0+cu128", source = "pytorch-gpu"}
hf_xet = "==1.1.10"
huggingface_hub = "==0.35.3"
joblib = "==1.5.2"
keras = "==3.11.3"
matplotlib = "==3.10.7"
nnAudio = "==0.3.3"
numpy = "==2.3.3"
pandas = "==2.3.3"
pyyaml = "==6.0.3"
scikit-learn = "==1.7.2"
tqdm = "==4.67.1"
transformers = "==4.57.1"
unidecode = "==1.4.0"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
